# agentmesh

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYING.md  FAUCETS.md  GOOD-MORNING.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/demo-alpha/: package.json
apps/demo-beta/: package.json
apps/external-agent/: package.json
apps/site/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/test/: AgentAccount.t.sol  AgentRegistry.t.sol  Integration.t.sol  LoadTest.t.sol  RecoveryModule.t.sol  ReputationRegistry.t.sol  ServiceMarketplace.t.sol  SpendingPolicyModule.t.sol
deployments/: amoy.json  polygon.json
docs/: architecture.md  glossary.md  integration-guide.md  launch.md  mainnet.md  protocol-spec.md  research-notes.md  roadmap.md  solana.md  stress-results.json  swarm-results.json  test-results.md  threat-model.md
docs/decisions/: 0001-erc4337-dual-path.md  0002-erc7579-minimal-modules.md  0003-x402-marketplace-binding.md  0004-reputation-formula.md  (+2 more)
programs/agentmesh/: Cargo.toml  README.md
programs/agentmesh/src/: lib.rs
scripts/: bootstrap-genesis.ps1  deploy-amoy.ps1  deploy-local.ps1  deploy-multichain.ps1  deploy-polygon.ps1  deploy-solana.ps1  install-solana-toolchain.ps1  run-demo.ps1  stress.ps1  verify-polygon.ps1
(+52 files in other folders)
