[package]
name = "agentmesh"
version = "0.1.0"
description = "AgentMesh — Solana implementation of the six-layer agent economy protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentmesh"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
